# face-recognition-cpp-tensorrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
app/: CMakeLists.txt  README.md  config.json
conversion/: onnx_to_tensorrt.py
conversion/arcface/: model_irse.py  torch2trt.py
conversion/retina/: torch2trt.py
conversion/retina/models/: retinaface.py  retinaface_trim.py
convert/arc/: model_irse.py  torch_to_onnx.py
convert/retina/: torch_to_onnx.py
main/: CMakeLists.txt
src/: app.cpp  arcface-ir50.cpp  arcface-ir50.h  arcface.cpp  arcface.h  common.cpp  common.h  crow-v0.3.h  crow.h  db.cpp  db.h  main.cpp  matmul.cpp  matmul.h  retinaface.cpp  retinaface.h  utils.cpp  utils.h  videoStreamer.cpp  videoStreamer.h  webclient.cpp  webclient.h
